# encoding-devops

./: .env.example  context  pyproject.toml
src/encoding_devops/: __init__.py  client.py  main.py  mcp_instance.py  omdb_client.py  prompts.py  resources.py  server.py  tools.py
src/encoding_devops/clients/: __init__.py  encoding_client.py  omdb_client.py
src/encoding_devops/utils/tools/: tools.py
